Export notebook to PDF and HTML

--- a/LTE Opacity.ipynb
+++ b/LTE Opacity.ipynb
@@ -850,7 +850,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "At densities $ \\le 10^{15}\\ \\mathrm{cm}^{-3}$, there is almost no effect at all. At moderate densities of $10^{17}$ to $10^{21}\\ \\mathrm{cm}^{-3}$ the prinicipal effect is to increase the neutral fraction at temperatures where H is nearly fully ionized.  This is due to $U$ increasing, which favors the neutral atom.  But, for the very highest densities $\\gt 10^{21}\\ \\mathrm{cm}^{-3}$, the continuum lowering starts to dominate and the partial ionization extends to lower temperatures due to reduction in the ionization potential.  This also tends to reduce $U$ again, since there *are* no excited levels to populate. Finally, for $N > 10^{24}\\ \\mathrm{cm}^{-3}$, even the ground level is unbound, so ionization is complete at all temperatures."
+    "At densities ${}\\le 10^{15}\\ \\mathrm{cm}^{-3}$, there is almost no effect at all. At moderate densities of $10^{17}$ to $10^{21}\\ \\mathrm{cm}^{-3}$ the prinicipal effect is to increase the neutral fraction at temperatures where H is nearly fully ionized.  This is due to $U$ increasing, which favors the neutral atom.  But, for the very highest densities $\\gt 10^{21}\\ \\mathrm{cm}^{-3}$, the continuum lowering starts to dominate and the partial ionization extends to lower temperatures due to reduction in the ionization potential.  This also tends to reduce $U$ again, since there *are* no excited levels to populate. Finally, for $N > 10^{24}\\ \\mathrm{cm}^{-3}$, even the ground level is unbound, so ionization is complete at all temperatures."
    ]
   },
   {
